[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Pause/Buttons.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/Pirata_One-128.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Buttons/ResumeButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Buttons/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Pause/pause.wav" type="AudioStream" id=5]

[node name="PauseMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterRow" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 728.0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="CenterRow"]
margin_left = 780.0
margin_right = 1140.0
margin_bottom = 728.0
alignment = 1

[node name="Label" type="Label" parent="CenterRow/Buttons"]
margin_right = 360.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1
valign = 1

[node name="ResumeButton" parent="CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 404.0
margin_right = 360.0
margin_bottom = 564.0

[node name="ExitButton" parent="CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 568.0
margin_right = 360.0
margin_bottom = 728.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

